--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
 
     <div class="bottom_container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/rheyjhey07/">LinkedIn</a>
+      <a class="footer-link" href="https://web.facebook.com/rheyjhey07/">Facebook</a>
+      <a class="footer-link" href="https://rheyjhey07.github.io/FirstWebDesign/">Website</a>
       <p class="copyright">© 2022 Rey-J Monje @rheyjhey07</p>
     </div>
   </body>
